--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
         url('./assets/fonts/Bubbleboddy_neue/bubbleboddyneue-thin-trial.woff');
     src: url('./assets/fonts/Bubbleboddy_neue/BubbleboddyNeue-Bold Trial.ttf') format('truetype'),
         url('./assets/fonts/Bubbleboddy_neue/BubbleboddyNeue-ExtraBold Trial.ttf') format('truetype'),
-        url('./assets/fonts/Bubbleboddy_neue/bubbleboddyneue-light trial.ttf') format('truetype'),
+        url('./assets/fonts/Bubbleboddy_neue/BubbleboddyNeue-Light Trial.ttf') format('truetype'),
         url('./assets/fonts/Bubbleboddy_neue/bubbleboddyneue-regular trial.ttf') format('truetype'),
-        url('./assets/fonts/Bubbleboddy_neue/bubbleboddyneue-thin Trial.ttf') format('truetype');
+        url('./assets/fonts/Bubbleboddy_neue/BubbleboddyNeue-Thin Trial.ttf') format('truetype');
 }
