--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,12 +1,18 @@
 nav {
-    background-color: #da001e;
+    background-color: white;
+    border-bottom: 1px solid #151217;
 }
 
-a {
+.nav-link {
     font-family: 'Comfortaa', sans-serif;
     font-weight: 400;
-    color: #fdd90b;
+    color: #da001e;
     text-align: center;
+    border-top: 1px solid #151217;
+}
+
+img {
+    width: 4rem;
 }
 
 .navbar-toggler {
