Code the basic HTML and CSS of the footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,17 @@
-<p>footer works!</p>
+<footer>
+  <section>
+    <a href="https://www.facebook.com/" target="_blank"
+      ><img src="assets/images/logofacebook.png" alt="Logo de facebook"
+    /></a>
+    <a href="https://www.instagram.com/" target="_blank"
+      ><img src="assets/images/logoinstagram.png" alt="Logo de instagram"
+    /></a>
+    <a href="https://www.x.com/" target="_blank"
+      ><img src="assets/images/logox.png" alt="Logo de X"
+    /></a>
+    <a href="https://www.tiktok.com/fr/" target="_blank"
+      ><img src="assets/images/logotiktok.png" alt="Logo de Tiktok"
+    /></a>
+  </section>
+  <small><p>© 2024 - Au petit village</p></small>
+</footer>
