--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,16 @@
-<p>about works!</p>
+<div class="about container">
+  <h2>Notre histoire</h2>
+
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel praesentium
+    voluptatum nisi aliquid corrupti atque, numquam, officiis itaque, veniam
+    deserunt dicta impedit enim quod cupiditate perferendis! Quos tempora
+    facilis officiis!
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel praesentium
+    voluptatum nisi aliquid corrupti atque, numquam, officiis itaque, veniam
+    deserunt dicta impedit enim quod cupiditate perferendis! Quos tempora
+    facilis officiis!
+  </p>
+</div>
