Code the basic HTML and CSS of the product page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact container">
+<div class="contact-page container">
   <section class="contact-us">
     <h2>Contactez-nous</h2>
     <form action="#">
