--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home container">
+<div class="home-page container">
   <section class="presentation">
     <h1>Découvrez nos figurines faites main!</h1>
     <p class="presentation-text">
@@ -16,7 +16,7 @@
       <div class="card-body">
         <h2 class="card-title">Figurine 1</h2>
         <p class="card-text">Prix</p>
-        <a href="#" class="btn">Ajouter au panier</a>
+        <button class="btn">Ajouter au panier</button>
       </div>
     </div>
   </section>
