--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-.home {
+.home-page {
     font-family: 'Comfortaa', sans-serif;
 }
 
@@ -31,6 +31,10 @@
 }
 
 .btn {
+    font-family: 'Comfortaa', sans-serif;
     background-color: #da001e;
     color: #fdd90b;
+    border: 1px solid #da001e;
+    border-radius: .375rem;
+    padding: .375rem .75rem .375rem .75rem;
 }
