--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,19 @@
-<p>product works!</p>
+<div class="product-page container">
+  <div class="card">
+    <img
+      src="assets/images/figurineasterix.jpg"
+      class="card-img-top"
+      alt="Figurine de Astérix"
+    />
+    <div class="border-img"></div>
+    <div class="card-body">
+      <h2 class="card-title">Figurine Astérix</h2>
+      <p class="card-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, maiores.
+        Dolorem placeat accusamus accusantium temporibus.
+      </p>
+      <div class="price">39,90€</div>
+      <button>Ajouter au panier</button>
+    </div>
+  </div>
+</div>
