--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -63,7 +63,27 @@
     border: none;
     border-radius: 30px;
     margin-bottom: 2rem;
-    padding: .75rem 0;
+    padding: .75rem 1.5rem;
+}
+
+.dropdown-menu {
+    background-color: #da001e;
+    border: 6px solid #fdd90b;
+}
+
+.dropdown-item {
+    background-color: #da001e;
+    color: #fdd90b;
+}
+
+.dropdown-menu .dropdown-item:first-child {
+    padding-bottom: .5rem;
+    border-bottom: 1px solid #fdd90b;
+}
+
+.dropdown-item:nth-child(2) {
+    padding-top: .5rem;
+    padding-bottom: 0;
 }
 
 .catalogue {
