--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,15 +10,31 @@
     </section>
     <div class="searching-features">
       <input type="text" class="search-input" placeholder="Rechercher" />
-      <button class="filtrer col-4">Filtrer</button>
+      <div class="dropdown-center col-4">
+        <button
+          class="dropdown-toggle filtrer"
+          type="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Filtrer
+        </button>
+        <ul class="dropdown-menu">
+          <li class="dropdown-item" (click)="toggleSortOrder('asc')">
+            Ordre croissant
+          </li>
+          <li class="dropdown-item" (click)="toggleSortOrder('desc')">
+            Ordre décroissant
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
-  <!--Futur catalogue en dupliquant cette card-->
   <section class="catalogue row justify-content-center gap-2 row-gap-3">
     <app-card
       class="col-5"
       id="card-catalogue"
-      *ngFor="let card of cards; let i = index"
+      *ngFor="let card of cards | sortByPrice : isClickedAsc : isClickedDesc"
       [srcImg]="card.srcImg"
       [altImg]="card.altImg"
       [cardTitle]="card.cardTitle"
