Add data for about page in existing service.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,16 +1,10 @@
 <div class="about container">
-  <h2>Notre histoire</h2>
+  <h2>{{ aboutTitle }}</h2>
 
   <p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel praesentium
-    voluptatum nisi aliquid corrupti atque, numquam, officiis itaque, veniam
-    deserunt dicta impedit enim quod cupiditate perferendis! Quos tempora
-    facilis officiis!
+    {{ aboutText1 }}
   </p>
   <p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel praesentium
-    voluptatum nisi aliquid corrupti atque, numquam, officiis itaque, veniam
-    deserunt dicta impedit enim quod cupiditate perferendis! Quos tempora
-    facilis officiis!
+    {{ aboutText2 }}
   </p>
 </div>
