--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
       [srcImg]="card.srcImg"
       [altImg]="card.altImg"
       [cardTitle]="card.cardTitle"
-      price="card.price"
+      [price]="card.price"
     ></app-card>
   </section>
 </div>
