--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,10 +1,1 @@
-<div class="product-page container">
-  <app-product-content
-    *ngIf="productContent.length > 0"
-    [srcImg]="productContent[0].srcImg"
-    [altImg]="productContent[0].altImg"
-    [productTitle]="productContent[0].productTitle"
-    [productDescription]="productContent[0].productDescription"
-    [price]="productContent[0].price"
-  />
-</div>
+<div class="product-page container"></div>
