--- a/src/app/product-content/product-content.component.css
+++ b/src/app/product-content/product-content.component.css
@@ -1,50 +1,35 @@
 .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    border-radius: 5px;
+    background-color: #f9d0a3;
     border: none;
+    border-radius: 0;
+    padding: .75rem .75rem 0 .75rem;
+}
+
+.bg-img {
+    background-color: white;
+    border-radius: 0;
 }
 
 .card-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
+    text-align: center;
 }
 
-h2 {
-    padding-bottom: 1rem;
-}
-
-img {
-    width: 70%;
-    padding-bottom: 1.5rem;
-}
-
-.border-img {
-    width: 70%;
-    border-bottom: 6px solid #151217;
-    border-radius: 10px;
-    margin-bottom: 2rem;
-}
-
-p {
-    width: 70%;
+.card-title {
+    font-size: 1rem;
 }
 
 .price {
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: bold;
-    font-size: 1.5rem;
-    padding-bottom: 1rem;
+    margin: .5rem;
 }
 
-button {
+.btn-shopping-cart {
     font-family: 'Comfortaa', sans-serif;
     background-color: #da001e;
     color: #fdd90b;
     border: 1px solid #da001e;
     border-radius: .375rem;
     padding: .375rem .75rem .375rem .75rem;
+    font-size: 0.79rem;
 }
