Allow access to product page based on product id by passing parameters to router

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,6 +48,7 @@
       [altImg]="product.altImg"
       [productTitle]="product.productTitle"
       [price]="product.price"
+      [productId]="product.id"
     ></app-product-content>
   </section>
 </div>
