--- a/src/app/product-content/product-content.component.html
+++ b/src/app/product-content/product-content.component.html
@@ -10,6 +10,11 @@
     <p class="price" id="price">
       {{ price | currency : "EUR" : "symbol" : "1.2-2" }}
     </p>
-    <button class="btn-shopping-cart">Ajouter au panier</button>
+    <button
+      class="btn-shopping-cart"
+      [routerLink]="['/accueil/produit', productId]"
+    >
+      Ajouter au panier
+    </button>
   </div>
 </div>
