--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,14 @@
-<div class="product-page container"></div>
+<div class="product-page container">
+  <div class="card">
+    <img [src]="product.srcImg" class="card-img-top" [alt]="product.altImg" />
+    <div class="border-img"></div>
+    <div class="card-body">
+      <h2 class="card-title">{{ product.productTitle }}</h2>
+      <p class="card-text">{{ product.productDescription }}</p>
+      <div class="price">
+        {{ product.price | currency : "EUR" : "symbol" : "1.2-2" }}
+      </div>
+      <button>Ajouter au panier</button>
+    </div>
+  </div>
+</div>
