--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -25,6 +25,7 @@
     <nav class="navbar navbar-expand-lg">
       <button
         class="navbar-toggler"
+        id="navbar-toggler"
         type="button"
         data-bs-toggle="collapse"
         data-bs-target="#navbarNav"
@@ -51,13 +52,23 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="/">Accueil</a>
+            <a
+              (click)="hideLinks()"
+              class="nav-link"
+              aria-current="page"
+              routerLink="/"
+              >Accueil</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/a-propos">À propos</a>
+            <a (click)="hideLinks()" class="nav-link" routerLink="/a-propos"
+              >À propos</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="contact">Contact</a>
+            <a (click)="hideLinks()" class="nav-link" routerLink="contact"
+              >Contact</a
+            >
           </li>
         </ul>
       </div>
