--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,11 @@
             src="/assets/images/shoppingbag.png"
             alt="Sac de course"
             class="shopping-bag"
-        /></a>
+          />
+          <span class="product-shopping-bag-count" id="span-counter">{{
+            productShoppingBagCounter
+          }}</span>
+        </a>
       </div>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
