--- a/src/app/product-content/product-content.component.html
+++ b/src/app/product-content/product-content.component.html
@@ -17,6 +17,8 @@
     <p class="price" id="price">
       {{ price | currency : "EUR" : "symbol" : "1.2-2" }}
     </p>
-    <button class="btn-shopping-cart">Ajouter au panier</button>
+    <button class="btn-shopping-cart" (click)="addToCart()">
+      Ajouter au panier
+    </button>
   </div>
 </div>
