--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,12 @@
 <div class="about container">
   <h2>{{ aboutTitle }}</h2>
-
-  <p>
-    {{ aboutText1 }}
-  </p>
-  <p>
-    {{ aboutText2 }}
-  </p>
+  <div class="about-content">
+    <p>
+      {{ aboutText1 }}
+    </p>
+    <p>
+      {{ aboutText2 }}
+    </p>
+    <img src="/assets/images/asterixvillage.png" alt="Astérix et ses amis" />
+  </div>
 </div>
