--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-page container">
+<div class="home-page container-fluid">
   <div class="banner">
     <section class="presentation">
       <h1>Découvrez nos figurines faites main!</h1>
