--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,3 +1,9 @@
+@media (min-width: 768px) {
+    .contact-page {
+        padding: .5rem 2.5rem 0 1.7rem;
+    }
+}
+
 h2 {
     padding-bottom: .5rem;
     padding-top: 1rem;
@@ -62,12 +68,28 @@ input {
     text-align: center;
 }
 
+@media (min-width: 768px) {
+    .custom-file-button {
+        padding: 0.8rem .5rem .5rem .5rem;
+    }
+}
+
 #file-name {
     border: 1px solid #555;
     width: 50%;
     color: #a5a5a5;
     text-align: center;
     padding: .5rem;
+}
+
+@media (min-width: 768px) {
+    #file-name {
+        border: 1px solid #555;
+        width: 50%;
+        color: #a5a5a5;
+        text-align: center;
+        padding: .75rem .5rem .5rem .5rem;
+    }
 }
 
 textarea {
