--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,12 +1,20 @@
-.container-fluid {
-    padding: 0;
-}
-
 .infos-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1rem .5rem 1rem;
+}
+
+@media (min-width: 576px) {
+    .infos-header {
+        padding: 1rem 4rem .5rem 2.5rem;
+    }
+}
+
+header {
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 
 .logo {
@@ -15,11 +23,7 @@
 
 .info-tel {
     margin: 0;
-    width: 40vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+    width: 135px;
 }
 
 .mobile-screen-button {
@@ -32,12 +36,21 @@ a {
     color: #151217;
     font-family: 'Comfortaa', sans-serif;
     font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav {
     background-color: #F9D0A3;
     padding: 0;
     border-top: 1px solid #FDD90B;
+}
+
+@media (min-width: 768px) {
+    nav {
+        padding: 0.5rem 2rem;
+    }
 }
 
 .navbar-toggler {
@@ -78,11 +91,34 @@ nav {
     padding-top: 1.8px;
 }
 
+@media (min-width: 576px) {
+    #span-counter {
+        right: 4%;
+    }
+}
+
+@media (min-width: 768px) {
+    #span-counter {
+        right: 7.5%;
+        top: 22%
+    }
+}
+
+.navbar-nav {
+    align-items: center;
+}
+
 .nav-item {
     font-family: 'Comfortaa', sans-serif;
     font-weight: bold;
     color: #151217;
     text-align: center;
+}
+
+@media (min-width: 768px) {
+    .nav-item {
+        font-size: 1.2rem;
+    }
 }
 
 .nav-link:active {
