--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,15 @@
-.container {
+.container-fluid {
     padding: 0;
 }
 
 .home-page {
     font-family: 'Comfortaa', sans-serif;
+}
+
+@media (min-width: 576px) {
+    h1 {
+        margin-bottom: 1.5rem;
+    }
 }
 
 .presentation {
@@ -15,6 +21,12 @@
     position: relative;
     z-index: 1;
     padding: 0 .75rem;
+}
+
+@media (min-width: 768px) {
+    .banner {
+        padding: 0 3rem 0 3rem;
+    }
 }
 
 .banner::before {
@@ -57,6 +69,10 @@
     color: #151217;
 }
 
+.dropdown-center {
+    text-align: center;
+}
+
 .filtrer {
     background-color: #da001e;
     color: #fdd90b;
@@ -93,5 +109,3 @@
 .col-5 {
     padding: 0;
 }
-
-/*2.399rem*/
