--- a/src/app/product-content/product-content.component.css
+++ b/src/app/product-content/product-content.component.css
@@ -5,6 +5,12 @@
     padding: .75rem .75rem 0 .75rem;
 }
 
+@media (min-width: 768px) {
+    .card {
+        padding: .75rem .75rem 1rem .75rem;
+    }
+}
+
 .bg-img {
     background-color: white;
     border-radius: 0;
@@ -16,12 +22,30 @@
     text-align: center;
 }
 
+@media (min-width: 768px) {
+    .card-body {
+        padding-top: 1.5rem;
+    }
+}
+
 .card-title {
     font-size: 1rem;
 }
 
+@media (min-width: 768px) {
+    .card-title {
+        font-size: 1.2rem;
+    }
+}
+
 .price {
     margin: .5rem;
+}
+
+@media (min-width: 768px) {
+    .price {
+        font-size: 1.2rem;
+    }
 }
 
 .btn-shopping-cart {
@@ -32,4 +56,10 @@
     border-radius: .375rem;
     padding: .375rem .75rem .375rem .75rem;
     font-size: 0.79rem;
+}
+
+@media (min-width: 768px) {
+    .btn-shopping-cart {
+        font-size: 1rem;
+    }
 }
