--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -49,3 +49,9 @@ button {
     border-radius: .375rem;
     padding: .375rem .75rem .375rem .75rem;
 }
+
+@media (min-width: 768px) {
+    button {
+        font-size: 1.2rem;
+    }
+}
