Add a new header for laptop screens

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,9 +35,11 @@
       </div>
     </div>
   </div>
-  <section class="catalogue row justify-content-center gap-2 row-gap-3">
+  <section
+    class="catalogue row justify-content-center gap-2 gap-lg-4 row-gap-3"
+  >
     <app-product-content
-      class="col-5"
+      class="col-5 col-lg-3"
       id="card-catalogue"
       *ngFor="
         let product of products
