--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
+<app-header id="header-1"></app-header>
+<app-header-2 id="header-2"></app-header-2>
 <router-outlet />
 <app-footer></app-footer>
