--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,17 +1,31 @@
-.card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    border-radius: 5px;
-    border: none;
-    padding-top: 2rem;
+@media (min-width: 992px) {
+    .product-page {
+        display: flex;
+        padding-top: 2rem;
+    }
 }
 
-.card-body {
+.div-img {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+}
+
+.product-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 992px) {
+    .product-content {
+        display: flex;
+        flex-direction: column;
+        align-items: baseline;
+        justify-content: space-around;
+        height: 26rem;
+    }
 }
 
 h2 {
@@ -23,6 +37,17 @@ img {
     padding-bottom: 1.5rem;
 }
 
+@media (min-width: 992px) {
+    img {
+        width: 20rem;
+        border-top: 15px solid #fdd90b;
+        border-right: 15px solid #fdd90b;
+        border-bottom: 15px solid #fdd90b;
+        border-left: 15px solid #fdd90b;
+        margin-right: 2rem;
+    }
+}
+
 .border-img {
     width: 70%;
     border-bottom: 6px solid #151217;
@@ -30,8 +55,20 @@ img {
     margin-bottom: 2rem;
 }
 
+@media (min-width: 992px) {
+    .border-img {
+        display: none;
+    }
+}
+
 p {
     width: 70%;
+}
+
+@media (min-width: 992px) {
+    p {
+        width: 100%;
+    }
 }
 
 .price {
