--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -28,17 +28,14 @@ img {
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     .about-content {
         padding: 0 6rem;
     }
+}
 
+@media (min-width: 1200px) {
     p {
-        padding: 0;
-    }
-
-    img {
-        display: block;
-        width: 100%;
+        font-size: 1.2rem;
     }
 }
