--- a/src/app/header-2/header-2.component.css
+++ b/src/app/header-2/header-2.component.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 4rem .5rem 2.5rem;
+    background-color: white;
 }
 
 .features-infos-header {
@@ -90,8 +91,14 @@ nav {
 }
 
 .navbar-nav {
-    width: 45%;
+    width: 40%;
     justify-content: space-between;
+}
+
+@media (min-width: 1440px) {
+    .navbar-nav {
+        width: 25rem;
+    }
 }
 
 .nav-item {
