--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -17,6 +17,19 @@
     font-weight: bold;
 }
 
+@media (min-width: 576px) {
+    .presentation {
+        padding-top: 3rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .presentation {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 .banner {
     position: relative;
     z-index: 1;
@@ -26,6 +39,12 @@
 @media (min-width: 768px) {
     .banner {
         padding: 0 3rem 0 3rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .banner {
+        padding: 0 13rem;
     }
 }
 
@@ -43,8 +62,23 @@
     z-index: -1;
 }
 
+@media (min-width: 1200px) {
+    .banner::before {
+        height: 200%;
+
+    }
+}
+
 .presentation-text {
     text-align: center;
+}
+
+@media (min-width: 1200px) {
+    .presentation-text {
+        font-size: 1.2rem;
+        width: 90%;
+        align-self: center;
+    }
 }
 
 .searching-features {
@@ -63,6 +97,12 @@
     font-size: 0.8rem;
     width: 15rem;
     font-weight: bold;
+}
+
+@media (min-width: 1200px) {
+    .search-input {
+        width: 25rem;
+    }
 }
 
 .search-input::placeholder {
@@ -105,6 +145,17 @@
 .catalogue {
     padding-top: 2rem;
 }
+
+@media (min-width: 1200px) {
+    .catalogue {
+        padding-top: 4rem;
+    }
+}
+
+app-product-content {
+    z-index: 1;
+}
+
 
 .col-5 {
     padding: 0;
