--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
     class="catalogue row justify-content-center gap-2 gap-lg-4 row-gap-3"
   >
     <app-product-content
-      class="col-5 col-lg-3"
+      class="col-5 col-lg-3 col-xl-2"
       id="card-catalogue"
       *ngFor="
         let product of products
