Apply cursor: pointer to certain elements

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -130,6 +130,7 @@
 .dropdown-item {
     background-color: #da001e;
     color: #fdd90b;
+    cursor: pointer;
 }
 
 .dropdown-menu .dropdown-item:first-child {
