--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,11 +2,19 @@
     display: none;
 }
 
+@media (max-width: 991px) {
+    #header-1 {
+        position: sticky;
+        top: 0;
+        z-index: 2;
+    }
+}
+
 #header-2 {
     display: none;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
     #header-2 {
         position: sticky;
         top: 0;
