--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -28,6 +28,7 @@ select {
     width: 100%;
     height: 2.5rem;
     padding: .5rem;
+    cursor: pointer;
 }
 
 input {
@@ -66,6 +67,7 @@ input {
     margin: 0;
     width: 60%;
     text-align: center;
+    cursor: pointer;
 }
 
 @media (min-width: 768px) {
