--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,18 +3,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1rem .5rem 1rem;
+    background-color: white;
 }
 
 @media (min-width: 576px) {
     .infos-header {
         padding: 1rem 4rem .5rem 2.5rem;
     }
-}
-
-header {
-    position: sticky;
-    top: 0;
-    z-index: 2;
 }
 
 .logo {
