--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 @media (min-width: 992px) {
@@ -25,6 +26,7 @@
         align-items: baseline;
         justify-content: space-around;
         height: 26rem;
+        text-align: start;
     }
 }
 
